kylin-music (1.1.0-18) v101; urgency=medium

  * BUG号：
   - 72121【音乐】安全中心添加音乐文件防篡改后，在音乐中删除本地音乐文件，应提示没有权限删除
   - 73074【音乐】【歌曲列表】音乐应用内选择“从本地删除”删掉没有“写”权限的音频文件可以删除
   - 73080【音乐】【歌曲列表】将歌曲列表中同一首歌曲重复添加到其他歌单没有提示
   - 73196【音乐】【歌曲列表】右键查看超长字段的歌曲信息，文字断行异常
   - 73244【音乐】播放音乐时拖拽/点击进度条松开鼠标后，进度条会自动前进或者后退一点，时长越短反应越明显
   - 75119【需求-音乐-8067】【搜索】出现搜索结果浮框后，点击其他地方，浮框不消失
   - 75102【需求-音乐-8067】【搜索】搜索框歌曲信息的字体不随系统设置改变
   - 75081【需求-音乐-8067】【搜索】搜索框中文本超长不能鼠标悬浮查看完整内容
   - 75054【需求-音乐-8067】【搜索】搜索框中专辑部分展示内容前后顺序错误
   - 75011【需求-音乐-8067】【搜索】搜索结果列表表格有边框，“时长”显示不全
   - 74997【需求-音乐-8067】【搜索】搜索结果浮框，不能随应用移动
   - 74979【需求-音乐-8067】【搜索】点击搜索结果的单曲，不能跳转到歌曲列表并播放歌曲
   - 74968【需求-音乐-8067】【搜索】搜索结果为空时，显示的不是搜索结果的空页面
   - 75743【音乐】歌曲列表中“时长”没有右对齐.
  * 任务号：无.
  * 其他改动说明：无.
  * 影响域：无.

 -- liujialin <liujialin@kylinos.cn>  Fri, 27 Aug 2021 17:06:30 +0800

kylin-music (1.1.0-17) v101; urgency=medium

  * BUG号：无.
  * 任务号：49668.
  * 其他改动说明：无.
  * 影响域：无.

 -- liujialin <liujialin@kylinos.cn>  Fri, 27 Aug 2021 14:48:50 +0800

kylin-music (1.1.0-16) v101; urgency=medium

  * BUG号：
   - 62331【音乐】mp2、m4a、m4r、wv打开后默认为视频播放器非音乐播放器.
  * 需求号：无.
  * 其他改动说明：无.
  * 影响域：无.

 -- liujialin <liujialin@kylinos.cn>  Tue, 24 Aug 2021 13:50:41 +0800

kylin-music (1.1.0-15) v101; urgency=medium

  * BUG号：
   - 62331【音乐】mp2、m4a、m4r、wv打开后默认为视频播放器非音乐播放器.
  * 需求号：无.
  * 其他改动说明：无.
  * 影响域：无.

 -- liujialin <liujialin@kylinos.cn>  Tue, 24 Aug 2021 11:50:41 +0800

kylin-music (1.1.0-14) v101; urgency=medium

  * BUG号：
   - 62331【音乐】mp2、m4a、m4r、wv打开后默认为视频播放器非音乐播放器.
  * 需求号：无.
  * 其他改动说明：无.
  * 影响域：无.

 -- liujialin <liujialin@kylinos.cn>  Fri, 20 Aug 2021 17:02:25 +0800

kylin-music (1.1.0-13) v101; urgency=medium

  * BUG号：
   - 73215【需求-音乐-6746】【歌单模块】新建歌单时，可以无禁止的输入字符，没有提示文字长度上限.
  * 需求号：无.
  * 其他改动说明：无.
  * 影响域：无.

 -- liujialin <liujialin@kylinos.cn>  Fri, 20 Aug 2021 13:28:25 +0800

kylin-music (1.1.0-12) v101; urgency=medium

  * BUG号：
   - 41898【麒麟音乐】英文界面下字体为16时，界面显示不全
   - 46437【麒麟音乐】部分界面字体随系统字体变化，部分不随，需要统一