@@ -1,3 +1,14 @@
+kylin-music (1.1.0-19) v101; urgency=medium
+
+  * BUG号：
+   - 75163【音乐】【历史播放】歌曲播放中，在历史播放列表中清空历史播放歌曲，在歌曲列表双击该歌曲重新播放后，历史播放列表无此歌曲
+   - 77278【创新院】【音乐】在侧边栏新建歌单，不识别特殊字符“&”.
+  * 需求号：无.
+  * 其他改动说明：无.
+  * 影响域：无.
+
+ -- liujialin <liujialin@kylinos.cn>  Mon, 30 Aug 2021 16:23:30 +0800
+
 kylin-music (1.1.0-18) v101; urgency=medium
 
   * BUG号：
